// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Component allows external props to be added 1`] = `
<WithStyles(Dialog)
  BackdropProps={
    Object {
      "classes": Object {
        "root": undefined,
      },
    }
  }
  PaperProps={
    Object {
      "classes": Object {
        "root": undefined,
      },
    }
  }
  className=""
  disableBackdropClick={true}
  disableEscapeKeyDown={true}
  id="hv-modal-5"
  onClose={[Function]}
  open={true}
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
        "escapeDeactivates": false,
        "initialFocus": undefined,
      }
    }
    paused={false}
  >
    <div
      aria-modal={true}
    >
      <HvButton
        category="ghost"
        id="hv-modal-5-close"
        onClick={[Function]}
        title="Close"
      >
        <WithStyles(Close) />
      </HvButton>
      Modal Content
    </div>
  </FocusTrap>
</WithStyles(Dialog)>
`;

exports[`Modal Component allows external styles to be added 1`] = `
<WithStyles(Dialog)
  BackdropProps={
    Object {
      "classes": Object {
        "root": "testClassBackground",
      },
    }
  }
  PaperProps={
    Object {
      "classes": Object {
        "root": "testClassPaper",
      },
    }
  }
  className="testClassRoot"
  id="hv-modal-7"
  onClose={[Function]}
  open={true}
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
        "escapeDeactivates": false,
        "initialFocus": undefined,
      }
    }
    paused={false}
  >
    <div
      aria-modal={true}
    >
      <HvButton
        category="ghost"
        className="testClassCloseButton"
        id="hv-modal-7-close"
        onClick={[Function]}
        title="Close"
      >
        <WithStyles(Close) />
      </HvButton>
      Modal Content
    </div>
  </FocusTrap>
</WithStyles(Dialog)>
`;

exports[`Modal Component onClose should be called when close button is clicked 1`] = `
<WithStyles(Dialog)
  BackdropProps={
    Object {
      "classes": Object {
        "root": undefined,
      },
    }
  }
  PaperProps={
    Object {
      "classes": Object {
        "root": undefined,
      },
    }
  }
  className=""
  id="hv-modal-8"
  onClose={[Function]}
  open={true}
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
        "escapeDeactivates": false,
        "initialFocus": undefined,
      }
    }
    paused={false}
  >
    <div
      aria-modal={true}
    >
      <HvButton
        category="ghost"
        id="hv-modal-8-close"
        onClick={[Function]}
        title="Close"
      >
        <WithStyles(Close) />
      </HvButton>
      Modal Content
    </div>
  </FocusTrap>
</WithStyles(Dialog)>
`;

exports[`Modal Component should render correctly if closed 1`] = `
<WithStyles(Dialog)
  BackdropProps={
    Object {
      "classes": Object {
        "root": undefined,
      },
    }
  }
  PaperProps={
    Object {
      "classes": Object {
        "root": undefined,
      },
    }
  }
  className=""
  id="hv-modal-3"
  onClose={[Function]}
  open={false}
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
        "escapeDeactivates": false,
        "initialFocus": undefined,
      }
    }
    paused={false}
  >
    <div
      aria-modal={true}
    >
      <HvButton
        category="ghost"
        id="hv-modal-3-close"
        onClick={[Function]}
        title="Close"
      >
        <WithStyles(Close) />
      </HvButton>
      Modal Content
    </div>
  </FocusTrap>
</WithStyles(Dialog)>
`;

exports[`Modal Component should render correctly if opened 1`] = `
<WithStyles(Dialog)
  BackdropProps={
    Object {
      "classes": Object {
        "root": undefined,
      },
    }
  }
  PaperProps={
    Object {
      "classes": Object {
        "root": undefined,
      },
    }
  }
  className=""
  id="hv-modal-1"
  onClose={[Function]}
  open={true}
>
  <FocusTrap
    _createFocusTrap={[Function]}
    active={true}
    focusTrapOptions={
      Object {
        "clickOutsideDeactivates": true,
        "escapeDeactivates": false,
        "initialFocus": undefined,
      }
    }
    paused={false}
  >
    <div
      aria-modal={true}
    >
      <HvButton
        category="ghost"
        id="hv-modal-1-close"
        onClick={[Function]}
        title="Close"
      >
        <WithStyles(Close) />
      </HvButton>
      Modal Content
    </div>
  </FocusTrap>
</WithStyles(Dialog)>
`;

exports[`Modal withStyles should render correctly 1`] = `
<JssProvider
  generateClassName={[Function]}
>
  <HvProvider
    changeTheme={[Function]}
    router={null}
    theme={null}
    uiKitTheme="dawn"
  >
    <WithStyles(Main)>
      Modal Content
    </WithStyles(Main)>
  </HvProvider>
</JssProvider>
`;
